--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --Dark-blue: hsl(218, 44%, 22%);
 }
 html{
-    font-size: 15px;
+    font-size: 93.75%;
     font-family: Outfit, sans-serif;
 }
 body{
@@ -48,7 +48,7 @@ p{
     color: var(--Grayish-blue);
 }
 .bold{
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 700;
     color: var(--Dark-blue);
 }
